--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="menu_button1">Offer Tour</string>
     <string name="menu_button2">Search for Tours</string>
     <string name="title_activity_create_ride">CreateRide</string>
+    <string name="title_activity_search_ride">SearchRide</string>
 </resources>
