Image with listing rides

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     </string>
     <string name="intro_message">Intro</string>
     <string name="title_activity_ride_map">Map</string>
+    <string name="itemEventsImageDesc">image</string>
 </resources>
